--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,16 @@
     <!-- Android/Chrome -->
     <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
+
+    <!-- Open Graph Meta Tags  -->
+    <meta property="og:title" content="Joseph Onumeguolor" />
+    <meta property="og:description" content="DevOps, Cloud & Security Engineer | Infrastructure, Security, Automation" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.joeonome.name.ng/" />
+    <meta property="og:image" content="https://i.ibb.co/fzcX9VDL/image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="John Doe">
