--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="DevOps, Cloud & Security Engineer | Infrastructure, Security, Automation" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.joeonome.name.ng/" />
-    <meta property="og:image" content="https://i.ibb.co/fzcX9VDL/image.png" />
+    <meta property="og:image" content="https://www.joeonome.name.ng/image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
